--- a/index.html
+++ b/index.html
@@ -77,17 +77,22 @@ My toolbox includes skills in <strong>HTML5, CSS3, Modern JavaScript, React, Red
 I'm known for my quick learning, strong work ethic, and proactive approach to getting things done. I thrive on learning and self-improvement, constantly seeking new challenges to become better each day. Additionally, I find fulfillment in mentoring and sharing my knowledge with others in the field.  --> 
 
                      <h3 class="section-subheading text-muted" > 
-                        Hello! My name is Kate Kruszeski. Welcome to my portfolio website! With a solid foundation in Technical Project Management and Project Management, I bring a diverse skill set and a proven track record of driving successful outcomes across various projects  </h3>
+                        Hello! My name is Kate Kruszeski. Welcome to my portfolio website! I am a <strong> Certified Associate in Project Management (CAPM) </strong> and a <strong> Certified Scrum Master (CSM) </strong> with a passion for helping teams and projects thrive. My experience spans Technical Project Management and Project Management, where I apply a mix of agile and traditional methods to achieve successful outcomes. I am also a <strong>Certified Associate in Frontend Web Development</strong> with a strong foundation in HTML, CSS, and JavaScript </h3>
+
+                    <h3 class="section-subheading text-muted"> 
+                    In my role as a Jr. Scrum Master at LaunchCode, I guide students on projects such as <strong> Local Event Finder </strong> and <strong> Kitchen Compass</strong>, focusing on collaboration, agile practices, and supporting their growth. I also volunteer with Adorable Babies Jump Start Corporation (ABJS), helping with web development and design to enhance their online presence using platforms like <strong>WordPress</strong> and <strong>Canva</strong> </h3>
 
                      <h3 class="section-subheading text-muted"> 
                         As a Technical Project Manager, I've demonstrated proficiency in HTML5/CSS3, JavaScript, Bootstrap, React, Microsoft-based applications, and Database Management. I excel in stakeholder management, project documentation, estimating, budgeting, and managing sponsor concerns throughout the project life cycle. Additionally, I'm adept at utilizing automation tools for streamlined project execution </h3>
 
                      <h3 class="section-subheading text-muted"> 
-                        My experience extends to managing projects with a focus on time management and efficiency. In previous roles, I've effectively coordinated project schedules, allocated resources, and monitored progress to ensure timely delivery of milestones. While I have some experience with Scrum methodologies, my primary expertise lies in traditional project management approaches and methodologies such as stakeholder management, project documentation, and budgeting  </h3>
+                     My technical skills include <strong> HTML5/CSS3, JavaScript, Bootstrap, React,</strong>  and <strong>Docker</strong>, along with proficiency in<strong>Microsoft-based applications</strong>. I am experienced in stakeholder management, project documentation, budgeting, and process automation to drive project success. I also use <strong>Discord, Jira, Github, Monday.com, Slack </strong> and <strong>Trello</strong> to mentor and support my learners, fostering a collaborative environment </h3>
 
                      <h3 class="section-subheading text-muted"> 
-                        Throughout my career, I've consistently demonstrated strong organizational skills, attention to detail, and the ability to thrive in dynamic environments. With a passion for continuous learning and a commitment to driving organizational success, I'm eager to contribute my expertise to new challenges and make a meaningful impact in the field of project management  
-                    </h3>
+                         I enjoy dynamic work environments where I can leverage my Agile and Scrum knowledge, support teams, and contribute to continuous improvement. I’m motivated by solving challenges, ensuring team efficiency, and making a positive impact on the projects I work on </h3>
+
+                    <h3 class="section-subheading text-muted"> 
+                    If you are looking for someone with a blend of technical know-how, a commitment to team success, and a focus on project efficiency, I would love to connect. Let’s collaborate to create meaningful results together </h3>
        
 
         
@@ -127,7 +132,7 @@ I'm known for my quick learning, strong work ethic, and proactive approach to ge
 
                     </section>
                     <div class="last-text">
-                            <p>Developed with love by Kate Kruszeski </p>
+                            <p>Developed and Management with love by Kate Kruszeski </p>
                     </div>
                     <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
     <script
